--- a/LABS/M01-L02-string_operations.ipynb
+++ b/LABS/M01-L02-string_operations.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "5kCqHBEUkUKA"
    },
@@ -121,11 +121,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "f-string expression part cannot include a backslash (Temp/ipykernel_21544/140458361.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Rfbj\\AppData\\Local\\Temp/ipykernel_21544/140458361.py\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    print(f'{freq}{\"\\n\"*3}')\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string expression part cannot include a backslash\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "only_words = poem.replace(\",\",\"\").replace(\".\",\"\").replace(\"\\n\",\" \")\n",
+    "print(f'{only_words}\\n\\n\\n')\n",
+    "\n",
+    "\n",
+    "poem_list = only_words.split()\n",
+    "print(f'{poem_list}\\n\\n\\n')\n",
+    "\n",
+    "freq = {}\n",
+    "\n",
+    "for word in poem_list:\n",
+    "    \n",
+    "    if word in freq:\n",
+    "        freq[word] +=1\n",
+    "    else:\n",
+    "        freq[word] = 1\n",
+    "    \n",
+    "print(f'{freq}{\\n\\n\\n')\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -141,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "id": "Xx0iP3skkUKE"
    },
@@ -172,11 +204,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i was angry with my friend i told my wrath my wrath did end i was angry with my foe i told it not my wrath did grow  and i waterd it in fears night morning with my tears and i sunned it with smiles and with soft deceitful wiles  and it grew both day and night till it bore an apple bright and my foe beheld it shine and he knew that it was mine  and into my garden stole when the night had veild the pole in the morning glad i see my foe outstretched beneath the tree\n",
+      "\n",
+      "\n",
+      "\n",
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'and', 'i', 'waterd', 'it', 'in', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'and', 'i', 'sunned', 'it', 'with', 'smiles', 'and', 'with', 'soft', 'deceitful', 'wiles', 'and', 'it', 'grew', 'both', 'day', 'and', 'night', 'till', 'it', 'bore', 'an', 'apple', 'bright', 'and', 'my', 'foe', 'beheld', 'it', 'shine', 'and', 'he', 'knew', 'that', 'it', 'was', 'mine', 'and', 'into', 'my', 'garden', 'stole', 'when', 'the', 'night', 'had', 'veild', 'the', 'pole', 'in', 'the', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n",
+      "\n",
+      "\n",
+      "\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "clean_poem = poem.replace(\";\",\"\").replace(\".\",\"\").replace(\":\",\"\").replace(\",\",\"\").replace(\"\\n\",\" \").replace(\"&\",\"\").replace(\"  \",\" \")\n",
+    "print(f'{clean_poem}\\n\\n\\n')\n",
+    "\n",
+    "poem = poem.lower()\n",
+    "\n",
+    "poem_words = clean_poem.split()\n",
+    "print(f'{poem_words}\\n\\n\\n')\n",
+    "\n",
+    "rejects = []\n",
+    "\n",
+    "for word in poem_words:\n",
+    "    if word not in reject_list:\n",
+    "        rejects.append(word)\n",
+    "\n",
+    "print(rejects)\n"
    ]
   },
   {
@@ -197,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "id": "wM4v-225yBNP"
    },
@@ -231,11 +295,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['9789-0984', '4222-0901', '4312-5701', '9413 1383', '8993-1031']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "pattern = \"\\d+[- ]\\d*\"\n",
+    "re.findall(pattern, text)"
    ]
   },
   {
@@ -253,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "id": "EzUBZKGqxX-A"
    },
@@ -264,11 +341,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n",
+      "ABBY4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "for x in data:\n",
+    "    result = re.search(\"\\d+\", x)\n",
+    "    if result:\n",
+    "        print(x)\n",
+    " "
    ]
   },
   {
@@ -289,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,11 +395,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Anacell provides the best services in the city whereas betacellular is the best of the world': 1, 'cetracular has awesome services, cetracular is good, cetracular is awesome!': 1, 'Best services provided by anacell, everyone should use anacell': 1, 'Wow, betacellular services are good.': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "reviews = reviews.lower()\n",
+    "\n",
+    "clean_reviews = reviews.\n",
+    "\n",
+    "freq2 = {}\n",
+    "\n",
+    "for word in reviews:\n",
+    "    \n",
+    "    if word in keywords_list:\n",
+    "        freq2[word] +=1\n",
+    "    else:\n",
+    "        freq2[word] = 1\n",
+    "\n",
+    "print(freq2)"
    ]
   },
   {
