Labs 1, 2, 3 concluídos - Pendencia: 2 últimos bônus do Lab03

--- a/LABS/M01-L02-string_operations.ipynb
+++ b/LABS/M01-L02-string_operations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "id": "n0LxSL1tkUJ4"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "id": "D9EWG-9YkUJ6"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bananas', 'bread', 'brownie mix', 'broccoli']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -83,8 +86,10 @@
     "for item in food_list:\n",
     "    if item.lower().startswith('b'):\n",
     "        groceries_with_b.append(item.lower())\n",
+    "    \n",
+    "    groceries_list = 'Grocery list: ' + ', '.join(groceries_with_b) + '.' \n",
     "\n",
-    "print(groceries_with_b)"
+    "groceries_list"
    ]
   },
   {
@@ -102,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "id": "5kCqHBEUkUKA"
    },
@@ -121,15 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string expression part cannot include a backslash (Temp/ipykernel_21544/140458361.py, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\Rfbj\\AppData\\Local\\Temp/ipykernel_21544/140458361.py\"\u001B[1;36m, line \u001B[1;32m19\u001B[0m\n\u001B[1;33m    print(f'{freq}{\"\\n\"*3}')\u001B[0m\n\u001B[1;37m                           ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m f-string expression part cannot include a backslash\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some say the world will end in fire Some say in ice From what I’ve tasted of desire I hold with those who favor fire But if it had to perish twice I think I know enough of hate To say that for destruction ice Is also great And would suffice\n",
+      "\n",
+      "\n",
+      "\n",
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
+      "\n",
+      "\n",
+      "\n",
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -141,6 +156,7 @@
     "\n",
     "\n",
     "poem_list = only_words.split()\n",
+    "\n",
     "print(f'{poem_list}\\n\\n\\n')\n",
     "\n",
     "freq = {}\n",
@@ -152,7 +168,7 @@
     "    else:\n",
     "        freq[word] = 1\n",
     "    \n",
-    "print(f'{freq}{\\n\\n\\n')\n",
+    "print(f'{freq}\\n\\n\\n')\n",
     "    \n",
     "\n",
     "\n",
@@ -173,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
     "id": "Xx0iP3skkUKE"
    },
@@ -204,22 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i was angry with my friend i told my wrath my wrath did end i was angry with my foe i told it not my wrath did grow  and i waterd it in fears night morning with my tears and i sunned it with smiles and with soft deceitful wiles  and it grew both day and night till it bore an apple bright and my foe beheld it shine and he knew that it was mine  and into my garden stole when the night had veild the pole in the morning glad i see my foe outstretched beneath the tree\n",
+      "I was angry with my friend I told my wrath my wrath did end I was angry with my foe I told it not my wrath did grow  And I waterd it in fears Night morning with my tears And I sunned it with smiles And with soft deceitful wiles  And it grew both day and night Till it bore an apple bright And my foe beheld it shine And he knew that it was mine  And into my garden stole When the night had veild the pole In the morning glad I see My foe outstretched beneath the tree\n",
       "\n",
       "\n",
       "\n",
-      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'and', 'i', 'waterd', 'it', 'in', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'and', 'i', 'sunned', 'it', 'with', 'smiles', 'and', 'with', 'soft', 'deceitful', 'wiles', 'and', 'it', 'grew', 'both', 'day', 'and', 'night', 'till', 'it', 'bore', 'an', 'apple', 'bright', 'and', 'my', 'foe', 'beheld', 'it', 'shine', 'and', 'he', 'knew', 'that', 'it', 'was', 'mine', 'and', 'into', 'my', 'garden', 'stole', 'when', 'the', 'night', 'had', 'veild', 'the', 'pole', 'in', 'the', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n",
+      "['I', 'was', 'angry', 'with', 'my', 'friend', 'I', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'I', 'was', 'angry', 'with', 'my', 'foe', 'I', 'told', 'it', 'not', 'my', 'wrath', 'did', 'grow', 'And', 'I', 'waterd', 'it', 'in', 'fears', 'Night', 'morning', 'with', 'my', 'tears', 'And', 'I', 'sunned', 'it', 'with', 'smiles', 'And', 'with', 'soft', 'deceitful', 'wiles', 'And', 'it', 'grew', 'both', 'day', 'and', 'night', 'Till', 'it', 'bore', 'an', 'apple', 'bright', 'And', 'my', 'foe', 'beheld', 'it', 'shine', 'And', 'he', 'knew', 'that', 'it', 'was', 'mine', 'And', 'into', 'my', 'garden', 'stole', 'When', 'the', 'night', 'had', 'veild', 'the', 'pole', 'In', 'the', 'morning', 'glad', 'I', 'see', 'My', 'foe', 'outstretched', 'beneath', 'the', 'tree']\n",
       "\n",
       "\n",
       "\n",
-      "<class 'list'>\n"
+      "['I', 'was', 'angry', 'with', 'my', 'friend', 'I', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'I', 'was', 'angry', 'with', 'my', 'foe', 'I', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'And', 'I', 'waterd', 'fears', 'Night', 'morning', 'with', 'my', 'tears', 'And', 'I', 'sunned', 'with', 'smiles', 'And', 'with', 'soft', 'deceitful', 'wiles', 'And', 'grew', 'both', 'day', 'night', 'Till', 'bore', 'apple', 'bright', 'And', 'my', 'foe', 'beheld', 'shine', 'And', 'he', 'knew', 'that', 'was', 'mine', 'And', 'into', 'my', 'garden', 'stole', 'When', 'night', 'had', 'veild', 'pole', 'In', 'morning', 'glad', 'I', 'see', 'My', 'foe', 'outstretched', 'beneath', 'tree']\n"
      ]
     }
    ],
@@ -261,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "metadata": {
     "id": "wM4v-225yBNP"
    },
@@ -295,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +320,7 @@
        "['9789-0984', '4222-0901', '4312-5701', '9413 1383', '8993-1031']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,33 +411,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Anacell provides the best services in the city whereas betacellular is the best of the world': 1, 'cetracular has awesome services, cetracular is good, cetracular is awesome!': 1, 'Best services provided by anacell, everyone should use anacell': 1, 'Wow, betacellular services are good.': 1}\n"
+      "{'anacell': 4, 'betacellular': 3, 'cetracular': 4}\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "reviews = reviews.lower()\n",
+    "import re\n",
+    "pattern = \"[^\\w\\d ]+\"\n",
+    "list_to_string = \" \".join(reviews).lower()\n",
+    "clean_text_list = re.sub(pattern, \"\", list_to_string).split()\n",
     "\n",
-    "clean_reviews = reviews.\n",
+    "keywords_list.sort()\n",
     "\n",
-    "freq2 = {}\n",
+    "dict_keywords = {item:1 for item in keywords_list} #convert list into dict\n",
     "\n",
-    "for word in reviews:\n",
-    "    \n",
+    "for word in clean_text_list:\n",
     "    if word in keywords_list:\n",
-    "        freq2[word] +=1\n",
-    "    else:\n",
-    "        freq2[word] = 1\n",
+    "        dict_keywords[word] += 1\n",
     "\n",
-    "print(freq2)"
+    "print(dict_keywords)"
    ]
   },
   {
@@ -438,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {
     "id": "rcVk3Gabwomy"
    },
@@ -449,12 +465,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc\n",
+      "abc123\n",
+      "JohnSmith1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "for item in data:\n",
+    "    if re.search(\"[a-z]\", item):\n",
+    "        print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -478,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
