--- a/LABS/M01-L03-list_comprehension.ipynb
+++ b/LABS/M01-L03-list_comprehension.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "id": "T7gaeGOWZMSe"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "id": "o73t-HN7ZMSj"
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "id": "XzwJ-84-ZMSm"
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "id": "1GGXubC7ZMSr"
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "id": "1jZnKGyHZMS1"
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {
     "id": "HxRNgI7eZMS_"
    },
@@ -366,13 +366,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "2lL4H54RZMTH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample_file_0.csv', 'sample_file_1.csv', 'sample_file_2.csv', 'sample_file_3.csv', 'sample_file_4.csv', 'sample_file_5.csv', 'sample_file_6.csv', 'sample_file_7.csv', 'sample_file_8.csv', 'sample_file_9.csv']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import os\n",
+    "dirlist = os.listdir(\"C:\\Ironhack\\DATA_CLASSES\\IRONHACK-DATA-SCIENCE\\LABS\\data\")\n",
+    "end_csv = [item for item in dirlist if item.endswith(\".csv\")]\n",
+    "#for item in dirlist:\n",
+    "#    if item.endswith(\".csv\"):\n",
+    "#        print(item)\n",
+    "print(end_csv)"
    ]
   },
   {
@@ -405,16 +420,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "yulC9QqKZMTQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "invert([1,2,3,4,5]) == [-1,-2,-3,-4,-5]\n",
-    "invert([1,-2,3,-4,5]) == [-1,2,-3,4,-5]\n",
-    "invert([]) == []"
+    "def invert(lst):\n",
+    "    inv = []\n",
+    "    for item in lst:\n",
+    "        inv.append(item * -1)\n",
+    "    return inv\n",
+    "\n",
+    "    \n",
+    "\n",
+    "print(invert([1,2,3,4,5]) == [-1,-2,-3,-4,-5])\n",
+    "print(invert([1,-2,3,-4,5]) == [-1,2,-3,4,-5])\n",
+    "print(invert([]) == [])"
    ]
   },
   {
@@ -442,13 +475,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "id": "fxF5kSYOZMTU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1]\n",
+      "[8, 6, 7, 5, 3, 0, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "def digitar(n):\n",
+    "    num = str(n)\n",
+    "    ln = list(num)\n",
+    "    integer_list = [int(item) for item in ln]\n",
+    "    #for item in ln:\n",
+    "    #    integer_list.append(int(item))\n",
+    "   \n",
+    "    return print(integer_list)\n",
+    "      \n",
+    "digitar(123)\n",
+    "digitar(1)\n",
+    "digitar(8675309)"
    ]
   },
   {
@@ -472,13 +527,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "id": "zpLSNMS4ZMTY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "def keep_num(lista):\n",
+    "\n",
+    "    nums = [(int(item)) for item in lista if str(item).isnumeric()]\n",
+    "    #for item in lista:\n",
+    "    #    if item.isnumeric():\n",
+    "    #        nums.append(int(item))\n",
+    "    return nums\n",
+    "    \n",
+    "keep_num([1,2,'a','b'])\n",
+    "    "
    ]
   },
   {
@@ -500,7 +576,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n"
    ]
   },
   {
@@ -532,7 +609,8 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n"
    ]
   }
  ],
@@ -557,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   },
   "metadata": {
    "interpreter": {
