--- a/LABS/M01-L04-functional_programming.ipynb
+++ b/LABS/M01-L04-functional_programming.ipynb
@@ -439,9 +439,11 @@
     "    \n",
     "    median = np.median(list_)\n",
     "    \n",
-    "    cat_above_med\n",
-    "    cat_med\n",
-    "    cat_below_med\n",
+    "    cat_above_med =\n",
+    "    \n",
+    "    cat_med = \n",
+    "    \n",
+    "    cat_below_med = \n",
     "    \n",
     "    return np.median(list_)\n",
     "\n",
@@ -468,7 +470,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "def recursive_age(age)\n",
+    "def recursive_age(age):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
     "    "
@@ -560,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
