--- a/LABS/M01-L06-object_oriented_programming.ipynb
+++ b/LABS/M01-L06-object_oriented_programming.ipynb
@@ -479,7 +479,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
