--- a/LABS/M01-L04-functional_programming.ipynb
+++ b/LABS/M01-L04-functional_programming.ipynb
@@ -23,14 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1t-NDi5NDCIW",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n"
@@ -410,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,18 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "50.0"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category list:\n",
+      "ABOVE MEDIAN: (120, 90, 70)\n",
+      "MEDIAN: (50,)\n",
+      "BELOW MEDIAN: (30, 10, 10)\n"
+     ]
     }
    ],
    "source": [
@@ -438,14 +452,21 @@
     "def categorized(list_):\n",
     "    \n",
     "    median = np.median(list_)\n",
+    "    cat_above_med = []\n",
+    "    cat_med = []\n",
+    "    cat_below_med = []\n",
     "    \n",
-    "    cat_above_med =\n",
+    "    for item in list_:\n",
+    "        if item > median:\n",
+    "            cat_above_med.append(item)\n",
+    "        elif item < median:\n",
+    "            cat_below_med.append(item)\n",
+    "        else:\n",
+    "            cat_med.append(item)\n",
     "    \n",
-    "    cat_med = \n",
-    "    \n",
-    "    cat_below_med = \n",
-    "    \n",
-    "    return np.median(list_)\n",
+    "    cat_above_med, cat_med, cat_below_med = tuple(cat_above_med), tuple(cat_med), tuple(cat_below_med)\n",
+    "            \n",
+    "    return print(f\"Category list:\\nABOVE MEDIAN: {cat_above_med}\\nMEDIAN: {cat_med}\\nBELOW MEDIAN: {cat_below_med}\")\n",
     "\n",
     "categorized(list_for_classification)"
    ]
@@ -465,15 +486,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "def recursive_age(age):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
+    "def recursive_age():\n",
+    "    age = input(\"age: \")\n",
+    "    while int(age) > 150:\n",
+    "        age = input(\"age:\")\n",
+    "    #while age > 0 and age < 150:\n",
+    "    #    input(\"Type your age: \")\n",
+    "       \n",
+    " \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age: 150\n",
+      "age:150\n",
+      "age:151\n",
+      "age:170\n",
+      "age:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "recursive_age()"
    ]
   },
   {
